--- a/webapp/backend/templates/index.html
+++ b/webapp/backend/templates/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Super audio app</title>
+    <title>Human speech classifier</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico')}}"/>
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -18,10 +19,19 @@
     <div class="jumbotron">
         <div class="row">
             <div class="col text-center">
-                <button id="record" class="btn btn-primary btn-lg">Record</button>
-                <button id="stop" class="btn btn-primary btn-lg" disabled>Stop</button>
-                <button id="play" class="btn btn-primary btn-lg" disabled>Play</button>
-                <button id="send" class="btn btn-primary btn-lg" disabled>Send to classifier</button>
+                <div id="visualizer_wrapper">
+                    <canvas id='canvas' width="600" height="250"></canvas>
+                </div>
+                <div>
+                    <button id="record" class="btn btn-primary btn-lg">Record</button>
+                    <button id="stop" class="btn btn-primary btn-lg" disabled>Stop</button>
+                    <button id="play" class="btn btn-primary btn-lg" disabled>Play</button>
+                    <button id="send" class="btn btn-primary btn-lg" disabled>Send to classifier</button>
+                </div>
+                <div class="label">
+                    Language:
+                    <language id="language">None</language>
+                </div>
             </div>
         </div>
     </div>
